<resources>
    <string name="app_name">Expenser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Expenser</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="scan">Scan</string>
    <string name="input">Input</string>
    <string name="logout">Log out</string>

    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <string name="total">Total:</string>
    <string name="date">Date:</string>
    <string name="pickDate">Pick the transanction Date</string>
    <string name="category">Category:</string>
    <string name="people">People:</string>

    <string name="facebook_app_id">106805313329035</string>
    <string name="fb_login_protocol_scheme">fb106805313329035</string>

</resources>
