<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmu.edu.expenser.InputActivity">

    <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView android:id="@+id/totalLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor = "@color/colorPrimary"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="@string/total" />

                <TextView android:id="@+id/dateLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor = "@color/colorPrimary"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="@string/date" />

                <TextView android:id="@+id/categoryLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor = "@color/colorPrimary"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="@string/category" />

                <TextView android:id="@+id/peopleLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor = "@color/colorPrimary"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:text="@string/people" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText android:id="@+id/totalEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:imeOptions="actionDone">
                </EditText>

                <EditText android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:hint="@string/pickDate">
                </EditText>

                <!--<Spinner android:id="@+id/categorySpinner"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:spinnerMode="dropdown"-->
                    <!--android:dropDownWidth="fill_parent"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:onClick="showDropDown"
                        android:src="@drawable/background" />

                </LinearLayout>

                <EditText android:id="@+id/peopleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionDone">
                </EditText>

            </LinearLayout>

        </LinearLayout>

        <Button style ="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/saveItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Save">
        </Button>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
