<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="cmu.edu.expenser.MainActivity"
                tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                android:id="@+id/image_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text=""/>

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView android:id="@+id/totalLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:textColor = "@color/colorPrimary"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:text="@string/total" />

                    <TextView android:id="@+id/dateLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:textColor = "@color/colorPrimary"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:text="@string/date" />

                    <TextView android:id="@+id/categoryLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:textColor = "@color/colorPrimary"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:text="@string/category" />

                    <TextView android:id="@+id/peopleLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:textColor = "@color/colorPrimary"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:text="@string/people" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText android:id="@+id/totalEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone">
                    </EditText>

                    <EditText android:id="@+id/dateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:textSize="14sp"
                        android:hint="@string/pickDate">
                    </EditText>

                    <Spinner android:id="@+id/categorySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown" />

                    <EditText android:id="@+id/peopleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone">
                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <Button android:id="@+id/saveItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="Save">
            </Button>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:id="@+id/image_details"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--android:text=""/>-->

        <!--</LinearLayout>-->
    </ScrollView>
</RelativeLayout>