<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmu.edu.expenser.ItemActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:paddingBottom="10dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/image_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text=""/>

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center" />

                <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView android:id="@+id/totalLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:textColor = "@color/colorPrimary"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:text="@string/total" />

                        <TextView android:id="@+id/dateLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:textColor = "@color/colorPrimary"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:text="@string/date" />

                        <TextView android:id="@+id/categoryLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:textColor = "@color/colorPrimary"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:text="@string/category" />

                        <TextView android:id="@+id/peopleLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:textColor = "@color/colorPrimary"
                            android:gravity="right"
                            android:layout_gravity="right"
                            android:text="@string/people" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText android:id="@+id/totalEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|numberSigned"
                            android:imeOptions="actionDone">
                        </EditText>

                        <EditText android:id="@+id/dateEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:imeOptions="actionDone"
                            android:textSize="14sp"
                            android:focusable="false"
                            android:hint="@string/pickDate">
                        </EditText>

                        <Spinner android:id="@+id/categorySpinner"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:spinnerMode="dropdown" />

                        <EditText android:id="@+id/peopleEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:imeOptions="actionDone">
                        </EditText>

                    </LinearLayout>

                </LinearLayout>

                <Button style ="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/splitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Split Bill">
                </Button>

                <LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_gravity="center"
                android:orientation="horizontal">

                    <Button style ="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/saveItemButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:text="Save">
                    </Button>

                <Button style ="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/deleteItemButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Delete">
                </Button>
            </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
